Now with url and name instead of ids.
